--- a/kebutuhan.html
+++ b/kebutuhan.html
@@ -1,95 +1,135 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kategori Kebutuhan Harian</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Kategori: Kebutuhan Harian</title>
   <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
-  <script>
-  window.onload = () => {
-    const container = document.getElementById('gridKebutuhan');
-    const sel = document.getElementById('voiceSelect');
-    sel.innerHTML = `
-      <option value="Indonesian Female">Perempuan</option>
-      <option value="Indonesian Male">Laki-laki</option>
-    `;
-    const arr = JSON.parse(localStorage.getItem('kosakata_kebutuhan') || '[]');
-    arr.forEach(item => {
-      const div = document.createElement('div');
-      div.className = 'item';
-      div.innerHTML = `<div class="emoji">${emo}</div><p>${item.teks}</p>`;
-      // pasang handler klik di dalam onload
-      div.onclick = () => responsiveVoice.speak(item.teks, sel.value);
-      container.appendChild(div);
-    });
-  };
-</script>
-    <style>
-    body { font-family: Arial, sans-serif; background-color: #f8fafc; margin: 0; padding: 20px; text-align: center; }
-    h1 { color: #2c3e50; }
-    .voice-select { margin: 10px auto; max-width: 300px; text-align: center; }
-    .voice-select select { width: 100%; padding: 8px; font-size: 1em; border-radius: 6px; border: 1px solid #ccc; }
-    .container { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; max-width: 600px; margin: 30px auto; }
-    .item { background: white; border: 2px solid #ddd; border-radius: 12px; padding: 20px; box-shadow: 2px 2px 6px #ccc; cursor: pointer; }
-    .item:hover { background-color: #e0f7fa; }
-    .emoji { font-size: 3.5em; line-height: 1; }
-    .item p { margin: 8px 0 0; font-size: 1.1em; color: #333; }
+  <style>
+    body {
+      font-family: 'Arial', cursive, arial;
+      background-color: #80daeb;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
+
+    h1 {
+      color: #ffffff;
+      margin-bottom: 10px;
+    }
+
+    .voice-select {
+      margin: 10px auto 20px;
+      max-width: 300px;
+    }
+
+    .voice-select select {
+      width: 100%;
+      padding: 8px;
+      font-size: 1em;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      cursor: pointer;
+    }
+
+    .container {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 15px;
+      max-width: 600px;
+      margin: 0 auto 40px;
+    }
+
+    .item {
+      padding: 8px 10px 18px 10px;
+      box-shadow: 2px 2px 6px #00000033;
+      border-radius: 12px;
+      cursor: pointer;
+      user-select: none;
+      transition: transform 0.2s ease;
+      background-color: #ffffff;
+      border: 2px solid #cbd5e1;
+      position: relative;
+    }
+
+    .item:hover {
+      transform: scale(1.03);
+    }
+
+    .emoji {
+      font-size: 2.5em;
+      line-height: 1;
+    }
+
+    .item p {
+      margin: 5px 0;
+      font-size: 1em;
+      color: #1f2937;
+    }
+
+    .controls {
+      position: relative;
+      display: flex;
+      justify-content: flex-end;
+      gap: 8px;
+    }
+
+    .controls button.fav {
+      position: absolute;
+      top: 8px;
+      left: 8px;
+      font-size: 1.6em;
+      color: #888;
+      background: none;
+      border: none;
+      cursor: pointer;
+      user-select: none;
+      transition: color 0.3s ease, filter 0.3s ease;
+      z-index: 10;
+      filter: grayscale(70%);
+    }
+
+    .controls button.fav.active {
+      color: #FFD700;
+      filter: none;
+      text-shadow: 0 0 5px #FFD700;
+    }
+
+    .controls button.mic {
+      background: none;
+      border: none;
+      font-size: 1.2em;
+      cursor: pointer;
+      color: #0a3d62;
+      position: relative;
+      z-index: 5;
+    }
+
+    .feedback {
+      margin-top: 4px;
+      font-weight: bold;
+      min-height: 18px;
+      font-size: 0.9em;
+      color: #0a3d62;
+    }
   </style>
 </head>
 <body>
 
-  <h1>Kebutuhan Harian</h1>
+  <h1 id="judulKategori">Kategori: Kebutuhan Harian</h1>
+
   <div class="voice-select">
-    <label for="voiceSelect">Pilih Suara:</label>
+    <label for="voiceSelect" style="color:white">Pilih Suara:</label>
     <select id="voiceSelect">
-      <option value="Indonesian Female">Perempuan</option>
+      <option value="Indonesian Female" selected>Perempuan</option>
       <option value="Indonesian Male">Laki-laki</option>
     </select>
   </div>
 
-  <div class="container" id="gridKebutuhan"></div>
+  <div class="container" id="gridKategori"></div>
 
   <script>
-    function speak(text) {
-      const selectedVoice = document.getElementById('voiceSelect').value;
-      responsiveVoice.speak(text, selectedVoice);
-    }
-
-    // Data default jika localStorage kosong
-    let arr = JSON.parse(localStorage.getItem('kosakata_kebutuhan') || 'null');
-    if (!arr) {
-      arr = [
-        { teks: 'Saya mau makan' },
-        { teks: 'Saya mau minum' },
-        { teks: 'Saya mau ke toilet' },
-        { teks: 'Saya mau tidur' },
-        { teks: 'Saya mau main' }
-      ];
-      localStorage.setItem('kosakata_kebutuhan', JSON.stringify(arr));
-    }
-
-    const mapE = {
-      'Saya mau makan': '🍚',
-      'Saya mau minum': '🥤',
-      'Saya mau ke toilet': '🚽',
-      'Saya mau tidur': '😴',
-      'Saya mau main': '🎲'
-    };
-
-    const container = document.getElementById('gridKebutuhan');
-    if (!arr.length) {
-      container.innerHTML = '<p>Belum ada kosakata ditambahkan.</p>';
-    } else {
-      arr.forEach(item => {
-        const emoji = mapE[item.teks] || '';
-        const div = document.createElement('div');
-        div.className = 'item';
-        div.innerHTML = `<div class=\"emoji\">${emoji}</div><p>${item.teks}</p>`;
-        div.onclick = () => speak(item.teks);
-        container.appendChild(div);
-      });
-    }
-  </script>
-
-</body>
-</html>
+    const soundClickMic = new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_c9bdf8633e.mp3?filename=mouse-click-124467.mp3');
+    const soundRecordStart = new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_d264174dae.mp3?filename=pop-94319.mp3');
+    const soundCorrect = new Audio('https://cdn.pixabay.com/download/audio/2022/02/23/audio_4b4e7647fa.mp3_
