--- a/emosi_perasaan.html
+++ b/emosi_perasaan.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: 'Arial', cursive, arial;
-      background-color: #80daeb; /* medium sky blue */
+      background-color: #80daeb;
       margin: 0;
       padding: 20px;
       text-align: center;
@@ -42,15 +42,15 @@
     }
 
     .item {
-      position: relative;
-      background-color: #ffffff;
-      border: 2px solid #cbd5e1;
-      border-radius: 12px;
-      padding: 10px 10px 36px 10px;
+      padding: 8px 10px 18px 10px;
       box-shadow: 2px 2px 6px #00000033;
+      border-radius: 12px;
       cursor: pointer;
       user-select: none;
       transition: transform 0.2s ease;
+      background-color: #ffffff;
+      border: 2px solid #cbd5e1;
+      position: relative;
     }
 
     .item:hover {
@@ -69,9 +69,31 @@
     }
 
     .controls {
+      position: relative;
+      display: flex;
+      justify-content: flex-end;
+      gap: 8px;
+    }
+
+    .controls button.fav {
       position: absolute;
-      bottom: 8px;
-      right: 12px;
+      top: 8px;
+      left: 8px;
+      font-size: 1.6em;
+      color: #888;
+      background: none;
+      border: none;
+      cursor: pointer;
+      user-select: none;
+      transition: color 0.3s ease, filter 0.3s ease;
+      z-index: 10;
+      filter: grayscale(70%);
+    }
+
+    .controls button.fav.active {
+      color: #FFD700;
+      filter: none;
+      text-shadow: 0 0 5px #FFD700;
     }
 
     .controls button.mic {
@@ -80,6 +102,8 @@
       font-size: 1.2em;
       cursor: pointer;
       color: #0a3d62;
+      position: relative;
+      z-index: 5;
     }
 
     .feedback {
@@ -89,20 +113,6 @@
       font-size: 0.9em;
       color: #0a3d62;
     }
-
-    .favorite {
-      position: absolute;
-      top: 8px;
-      left: 12px;
-      font-size: 1.3em;
-      cursor: pointer;
-      color: gray;
-      transition: color 0.2s ease;
-    }
-
-  .favorite.favorit-aktif {
-    color: gold;
-  }
   </style>
 </head>
 <body>
@@ -120,7 +130,6 @@
   <div class="container" id="gridKategori"></div>
 
   <script>
-    // Sound effect (bebas pakai atau ganti link lain)
     const soundClickMic = new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_c9bdf8633e.mp3?filename=mouse-click-124467.mp3');
     const soundRecordStart = new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_d264174dae.mp3?filename=pop-94319.mp3');
     const soundCorrect = new Audio('https://cdn.pixabay.com/download/audio/2022/02/23/audio_4b4e7647fa.mp3?filename=correct-2-46134.mp3');
@@ -157,35 +166,25 @@
       ]
     };
 
-    function buatGridKategori(data) {
-      const container = document.getElementById('gridKategori');
-      container.innerHTML = '';
+    function loadFavorit() {
+      return JSON.parse(localStorage.getItem('favoritList')) || [];
+    }
 
-      const favoritList = JSON.parse(localStorage.getItem("favoritList")) || [];
+    function saveFavorit(list) {
+      localStorage.setItem('favoritList', JSON.stringify(list));
+    }
 
-      data.items.forEach(item => {
-        const teks = item.teks;
-        const emoji = item.emoji || '❓';
-        const idTeks = teks.toLowerCase().replace(/\s+/g, '-').replace(/[^\w-]/g, '');
-        const isFavorit = favoritList.includes(teks);
-        const bintangClass = isFavorit ? 'favorit-aktif' : '';
-
-        const div = document.createElement('div');
-        div.className = 'item';
-        div.innerHTML = `
-          <div class="favorite ${bintangClass}" onclick="event.stopPropagation(); toggleFavorit('${teks}')">⭐</div>
-          <div class="emoji">${emoji}</div>
-          <p>${teks}</p>
-          <div class="controls">
-            <button class="mic" onclick="event.stopPropagation(); latih('${teks}', '${idTeks}')">🎤</button>
-          </div>
-          <p class="feedback" id="feedback-${idTeks}"></p>
-         `;
-
-        div.onclick = () => bicara(teks);
-        container.appendChild(div);
-      });
+    function toggleFavorit(teks) {
+      let favoritList = loadFavorit();
+      const idx = favoritList.indexOf(teks);
+      if (idx > -1) {
+        favoritList.splice(idx, 1);
+      } else {
+        favoritList.push(teks);
       }
+      saveFavorit(favoritList);
+      renderGridKategori();
+    }
 
     function bicara(teks) {
       const voice = document.getElementById('voiceSelect').value || "Indonesian Female";
@@ -241,22 +240,37 @@
       return dp[b.length][a.length];
     }
 
-    function toggleFavorit(teks) {
-      let favorit = JSON.parse(localStorage.getItem("favoritList")) || [];
-      const index = favorit.indexOf(teks);
+    function renderGridKategori() {
+      document.getElementById('judulKategori').innerText = `Kategori: ${dataKategori.judul}`;
+      const container = document.getElementById('gridKategori');
+      container.innerHTML = '';
 
-      if (index > -1) {
-        favorit.splice(index, 1);
-      } else {
-        favorit.push(teks);
-      }
+      const favoritList = loadFavorit();
 
-  localStorage.setItem("favoritList", JSON.stringify(favorit));
-  buatGridKategori(dataKategori);
-}
+      dataKategori.items.forEach(item => {
+        const teks = item.teks;
+        const emoji = item.emoji || '❓';
+        const idTeks = teks.toLowerCase().replace(/\s+/g, '-').replace(/[^\w-]/g, '');
+        const isFavorit = favoritList.includes(teks);
+
+        const div = document.createElement('div');
+        div.className = 'item';
+        div.innerHTML = `
+          <div class="emoji">${emoji}</div>
+          <p>${teks}</p>
+          <div class="controls">
+            <button class="fav ${isFavorit ? 'active' : ''}" title="${isFavorit ? 'Hapus dari Favorit' : 'Tambah ke Favorit'}" onclick="event.stopPropagation(); toggleFavorit('${teks}')">⭐</button>
+            <button class="mic" title="Latih bicara" onclick="event.stopPropagation(); latih('${teks}', '${idTeks}')">🎤</button>
+          </div>
+          <p class="feedback" id="feedback-${idTeks}"></p>
+        `;
+        div.onclick = () => bicara(teks);
+        container.appendChild(div);
+      });
+    }
 
     window.onload = () => {
-      buatGridKategori(dataKategori);
+      renderGridKategori();
     };
   </script>
 
