--- a/kategori.html
+++ b/kategori.html
@@ -50,8 +50,8 @@
     <button class="btn" onclick="window.location.href='kebutuhan.html'">🍽️ Kebutuhan Harian</button>
     <button class="btn" onclick="window.location.href='salam_sosial.html'">👋 Salam & Sosial</button>
     <button class="btn" onclick="window.location.href='emosi_perasaan.html'">👋Emosi & Perasaan</button>
-    <button class="btn" onclick="alert('Menuju Makanan & Minuman')">🍓 Makanan & Minuman</button>
-    <button class="btn" onclick="alert('Menuju Tempat')">🏠 Tempat</button>
+    <button class="btn" onclick="window.location.href='tempat.html'">🏠 Tempat</button>
+    <button class="btn" onclick="window.location.href='makanan.html'">🍓 Makanan & Minuman</button>
     <button class="btn" onclick="window.location.href='favorit.html'">⭐ Favorit</button>
   </div>
 </body>
