--- a/kategori.html
+++ b/kategori.html
@@ -45,7 +45,7 @@
   <div class="container">
     <button class="btn" onclick="window.location.href='lokasi_sekolah.html'">🏫 Di Sekolah</button>
     <button class="btn" onclick="window.location.href='lokasi_rumah.html'">🏠 Di Rumah</button>
-    <button class="btn" onclick="window.location.href='lokasi_lingkungan.html'">🏕️ Di Lingkungan</button>
+    <button class="btn" onclick="window.location.href='lingkungan.html'">🏕️ Di Lingkungan</button>
     <button class="btn" onclick="window.location.href='lokasi_tempatumum.html'">🛒 Di Tempat Umum</button>
     <button class="btn" onclick="window.location.href='kebutuhan.html'">🍽️ Kebutuhan Harian</button>
     <button class="btn" onclick="window.location.href='salam_sosial.html'">👋 Salam & Sosial</button>
