--- a/kategori.html
+++ b/kategori.html
@@ -46,7 +46,7 @@
     <button class="btn" onclick="window.location.href='lokasi_sekolah.html'">🏫 Di Sekolah</button>
     <button class="btn" onclick="window.location.href='lokasi_rumah.html'">🏠 Di Rumah</button>
     <button class="btn" onclick="window.location.href='lingkungan.html'">🏕️ Di Lingkungan</button>
-    <button class="btn" onclick="window.location.href='lokasi_tempatumum.html'">🛒 Di Tempat Umum</button>
+    <button class="btn" onclick="window.location.href='tempatumum.html'">🛒 Di Tempat Umum</button>
     <button class="btn" onclick="window.location.href='kebutuhan.html'">🍽️ Kebutuhan Harian</button>
     <button class="btn" onclick="window.location.href='salam_sosial.html'">👋 Salam & Sosial</button>
     <button class="btn" onclick="window.location.href='emosi_perasaan.html'">👋Emosi & Perasaan</button>
