--- a/kategori.html
+++ b/kategori.html
@@ -52,6 +52,7 @@
     <button class="btn" onclick="window.location.href='emosi_perasaan.html'">👋Emosi & Perasaan</button>
     <button class="btn" onclick="window.location.href='tempat.html'">🏠 Tempat</button>
     <button class="btn" onclick="window.location.href='makanan.html'">🍓 Makanan & Minuman</button>
+    <button class="btn" onclick="window.location.href='subjek.html'">👧🏻 Subjek & Orang</button>
     <button class="btn" onclick="window.location.href='favorit.html'">⭐ Favorit</button>
   </div>
 </body>
